# vedic-ai-framework

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_SETUP.md  DaivAI_Phase1_Deep_Audit_Report.docx  Dockerfile  INTERPRETATION_FIX.md  Makefile  SECURITY.md  docker-compose.yml  pyproject.toml  setup.sh
.claude/: settings.local.json
.githooks/: post-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  lint.yml  release.yml  test.yml
apps/: pyproject.toml
apps/src/daivai_app/: scheduler.py
apps/src/daivai_app/cli/: commands.py  commands_admin.py  commands_observational.py  main.py
apps/src/daivai_app/telegram/: handlers.py
apps/src/daivai_app/web/: app.py  database.py  routes.py  routes_client.py  routes_standalone.py
apps/src/daivai_app/web/static/: components.css
apps/src/daivai_app/web/templates/: base.html  daily.html  dasha.html  input_form.html  navamsha.html  overview.html  ratna.html
apps/src/daivai_app/web/templates/components/: client_nav.html  macros.html
apps/src/jyotish_app/: scheduler.py
apps/src/jyotish_app/cli/: __main__.py  commands.py  main.py
apps/src/jyotish_app/telegram/: bot.py  handlers.py
apps/src/jyotish_app/web/: app.py  auth.py  database.py  routes.py  routes_standalone.py
apps/src/jyotish_app/web/static/: components.css  design-tokens.json  tokens.css
apps/src/jyotish_app/web/templates/: base.html  daily.html  dasha.html  dashboard.html  input_form.html  login.html  match_form.html  match_result.html  muhurta_form.html  muhurta_result.html  navamsha.html  overview.html  ratna.html
apps/src/jyotish_app/web/templates/components/: diamond_chart.html  macros.html
config/: .env.example  logging.yaml
docs/architecture/: DECISIONS.md  LAYERS.md  OVERVIEW.md  data-flow.md  five-layers.md  overview-patterns.md  overview.md  phase-status.md  roadmap.md
docs/deployment/: OVERNIGHT_PLAN.md  google-oauth-setup.md  oracle-setup.md  overnight-plan-details.md  overnight-plan.md
docs/design/: design-pages.md  design-system.md  project-context-tech.md  project-context.md
docs/development/: SETUP.md  STYLE_GUIDE.md  TESTING.md  setup.md  style-guide.md  testing.md
docs/engine/: feature-map.md  research-priorities.md  yaml-coverage.md
docs/products/: family-bond.md
docs/vedic/: GEMSTONE_SAFETY.md  LORDSHIP_GUIDE.md  gemstone-safety.md  kalachakra-reference.md  kalachakra-sequences.md
engine/src/daivai_engine/: __init__.py  constants.py
jyotish/: cli.py
jyotish/compute/: ashtakavarga.py  bhava_chalit.py  chart.py  daily.py  dasha.py  dasha_extra.py  divisional.py  dosha.py  jaimini.py  kp.py  matching.py  panchang.py  strength.py  transit.py  upagraha.py  yoga.py
jyotish/config/: _legacy.py
jyotish/deliver/: telegram_bot.py
jyotish/interpret/: interpreter.py  knowledge_loader.py  llm_backend.py
jyotish/knowledge/: yoga_definitions.yaml
jyotish/learn/: audio_processor.py  corrections.py  life_events_db.py  pattern_engine.py  prediction_tracker.py  rule_extractor.py  trust_scorer.py  validator.py
jyotish/scriptures/: scripture_db.py
jyotish/utils/: geo.py  logging_config.py
products/: pyproject.toml
products/src/daivai_products/decision/: __init__.py  chart_selector.py  confidence.py  confidence_helpers.py  cross_validator.py  gemstone_factors.py  gemstone_weight.py  house_highlighter.py  models.py
products/src/daivai_products/interpret/: _renderer_context.py  advanced_context.py  advanced_context_extra.py  decision_context.py  factory.py  renderer.py
products/src/daivai_products/interpret/prompts/: __init__.py  career_analysis.md  chart_overview.md  decision_prompt.py  financial_analysis.md  health_analysis.md  lal_kitab_remedies.md  relationship_analysis.md  spiritual_profile.md  timeline_summary.md
products/src/daivai_products/plugins/content/: __init__.py  cards.py  rashifal.py  rashifal_engine.py
products/src/daivai_products/plugins/daily/: engine.py
products/src/daivai_products/plugins/kundali/: context_builders.py  dasha_gantt.py  dasha_gantt_data.py  diamond.py  diamond_helpers.py  html_context.py  pdf.py  pdf_reportlab.py  report.py  svg_chart.py  theme.py
products/src/daivai_products/plugins/kundali/templates/: _ashtakavarga.html  _certificate.html  _chart_section.html  _dasha_timeline.html  _gemstones.html  _golden_period.html  _graha_table.html  _shadbala.html  _title_page.html  _yoga_cards.html  kundali.html
products/src/daivai_products/plugins/pandit/: trust.py  validation.py
products/src/daivai_products/plugins/predictions/: __init__.py  accuracy.py  engine.py  matcher.py  models.py
products/src/daivai_products/plugins/remedies/: __init__.py  _gemstone_factors.py  _gemstone_tables.py  engine.py  gemstone.py  models.py
products/src/daivai_products/store/: family.py
products/src/jyotish_products/plugins/kundali/: accuracy_cert.py  ashtakavarga_heatmap.py  dasha_gantt.py  diamond.py  diamond_text.py  gemstone_card.py  golden_period.py  pdf.py  prohibited_stones.py  report.py  shadbala_chart.py  theme.py  yoga_cards.py
scripts/: architecture_audit.py  check_imports.py  export_notebooklm.sh  gemstone_safety_audit.py
scripts/backup/: auto_backup.sh  local_backup.sh  setup_gdrive_sync.sh
scripts/deploy/: backup.sh  setup_oracle.sh
tests/compute/: test_ashtakavarga.py  test_astro_constants.py  test_bhava_chalit.py  test_chart_extra.py  test_daily_extra.py  test_dasha_extra.py  test_divisional.py  test_jaimini.py  test_kp.py  test_shadbala.py  test_upagraha.py
tests/engine/: test_dasha.py  test_dosha.py  test_edge_cases.py  test_knowledge_yaml.py  test_namakarana.py  test_sarvatobhadra.py  test_yoga.py
tests/integration/: test_full_pipeline.py
tests/learn/: test_life_events.py  test_pattern_engine.py  test_prediction_tracker.py  test_trust_scorer.py  test_validator.py
tests/scriptures/: test_scripture_db.py
tools/nlm/: auto-query.sh  nlm.py  setup.sh
(+442 files in other folders)
