[project]
name = "daivai"
version = "1.0.0"
description = "AI-powered Vedic astrology — engine, products, and apps"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Manish Chaurasia"}]
dependencies = [
    "daivai-engine",
    "daivai-products[all]",
    "daivai-apps[all]",
]

[tool.uv.workspace]
members = ["engine", "products", "apps"]

[tool.uv.sources]
daivai-engine = { workspace = true }
daivai-products = { workspace = true }
daivai-apps = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20250915",
    "types-pytz>=2026.1.1.20260304",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["engine/src", "products/src", "apps/src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg — Click pattern
    "SIM108", # ternary — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["daivai_engine", "daivai_products", "daivai_app"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "daivai_app.web.*"
disable_error_code = ["arg-type"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["engine/src", "products/src", "apps/src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "safety: gemstone/interpretation safety tests",
    "slow: slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
