[project]
name = "jyotish"
version = "1.0.0"
description = "AI-powered Vedic astrology — CLI, Web, and Telegram."
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Manish Chaurasia"}]
dependencies = [
    "jyotish-products",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.22",
]
telegram = ["python-telegram-bot>=21.0"]
all = ["jyotish[web,telegram]"]

[project.scripts]
jyotish = "jyotish_app.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jyotish_app"]
