[project]
name = "daivai-apps"
version = "1.0.0"
description = "AI-powered Vedic astrology — CLI, Web, and Telegram."
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{name = "Manish Chaurasia"}]
dependencies = [
    "daivai-products",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.22",
]
telegram = ["python-telegram-bot>=21.0"]
all = ["daivai-apps[web,telegram]"]

[project.scripts]
daivai = "daivai_app.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daivai_app"]
