[project]
name = "daivai-products"
version = "1.0.0"
description = "DaivAI Products — 7 plugins, LLM interpretation, safety validation."
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{name = "Manish Chaurasia"}]
dependencies = [
    "daivai-engine",
    "jinja2>=3.0",
]

[project.optional-dependencies]
groq = ["groq>=0.9.0"]
ollama = ["ollama>=0.4.0"]
claude = ["anthropic>=0.39.0"]
openai = ["openai>=1.50.0"]
pdf = ["reportlab>=4.0", "matplotlib>=3.8", "weasyprint>=62.0"]
all = ["daivai-products[groq,ollama,claude,openai,pdf]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daivai_products"]
